--- a/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
+++ b/DocSearch2.1/Views/Admin/EditorTemplates/PublicVM.cshtml
@@ -26,7 +26,7 @@
         @Html.ValidationMessageFor(model => model.IssueDate, "", new { @class = "text-danger" })
     </td>
     <td>
-        @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" }, rows = "5" })
         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
     </td>
     <td>
@@ -41,7 +41,8 @@
         @Html.ValidationMessageFor(model => model.Method, "", new { @class = "text-danger" })
     </td>
     <td>
-        @Html.EditorFor(model => model.Originator, new { htmlAttributes = new { @class = "form-control " + @Model.CategoryName, @disabled = "disabled" } })
+        @Html.EditorFor(model => model.Originator, new { htmlAttributes = new { @class = "form-control " + @Model.CategoryName, @disabled = "disabled", style = "width: 150px" } })
+        @*Should eventually remove the inline styling for style sheets*@
         @Html.ValidationMessageFor(model => model.Originator, "", new { @class = "text-danger" })
     </td>
     <td>
@@ -60,7 +61,8 @@
         @Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })
     </td>
     <td>
-        @Html.EditorFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control " + @Model.CategoryName, @disabled = "disabled" } })
+        @Html.EditorFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control " + @Model.CategoryName, @disabled = "disabled", style = "width: 150px" } })
+        @*Should eventually remove the inline styling for style sheets*@
         @Html.ValidationMessageFor(model => model.Recipient, "", new { @class = "text-danger" })
     </td>
     <td>
