--- a/DocSearch2.1/Views/PublicVM/_FileDisplay.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_FileDisplay.cshtml
@@ -1,6 +1,6 @@
 ﻿<script>
     var txt;
-
+    //I dont think I need this alert anymore.
     if (confirm("The file you are looking for has been moved to another repository. If you still want to view this file click on the button below to send a request to support.") == true) {
         txt = "Send";
         window.open('', '_self', '');
