--- a/DocSearch2.1/Views/Shared/Errors.cshtml
+++ b/DocSearch2.1/Views/Shared/Errors.cshtml
@@ -4,6 +4,19 @@
     ViewBag.Title = "Error";
 }
 <div class="error-page">
-    <h4 class="text-danger">An error occurred while processing your request.</h4>
+    <h3 class="text-danger">An error occurred while processing your request.</h3>
+    <br/>
     <h4>Please contact IT-Support if you need assistance.</h4>
+    <br/>
+    @if (TempData["Client_Id"] != null)
+    {
+        <h4>Please provide the following information to support:</h4>
+        <br/>
+        <h5>Public Id: @TempData["Client_Id"]</h5>
+        <h5>Public Name: @TempData["Client_Name"]</h5>
+    }
+    @if (ViewData["repositoryRequestDocId"] != null)
+    {
+        <h5>Document Id: @ViewData["repositoryRequestDocId"] </h5>
+    }
 </div>
