added more logic for error page info

--- a/DocSearch2.1/Views/Shared/Errors.cshtml
+++ b/DocSearch2.1/Views/Shared/Errors.cshtml
@@ -5,16 +5,21 @@
 }
 <div class="error-page">
     <h3 class="text-danger">An error occurred while processing your request.</h3>
-    <br/>
+    <br />
     <h4>Please contact IT-Support if you need assistance.</h4>
-    <br/>
+    <br />
     @if (TempData["Client_Id"] != null)
     {
         <h4>Please provide the following information to support:</h4>
-        <br/>
+        <br />
         <h5>Public Id: @TempData["Client_Id"]</h5>
+    }
+
+    @if (TempData["Client_Name"] != null)
+    {
         <h5>Public Name: @TempData["Client_Name"]</h5>
     }
+
     @if (ViewData["repositoryRequestDocId"] != null)
     {
         <h5>Document Id: @ViewData["repositoryRequestDocId"] </h5>
