working on the new daterange features

--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <h2>Client Id with a picture: 1403635</h2>
     <h2>Browns Client Id = 1012504</h2>
     @Html.Label("ClientId", "Client Id")
-    @Html.TextBox("ClientId", 568801); 
+    @Html.TextBox("ClientId", 1186367); 
 
     <input type="submit" name="Role" value="Submit" />
     <input type="submit" name="Role" value="Admin" />
