--- a/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
+++ b/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
@@ -6,7 +6,8 @@
             <li class="category_nav">
                 <div>
                     <a href="@Url.Action("Index", "PublicVM", new {
-                                            publicId = Model.First().Folder_ID,
+                                            //publicId = Model.First().Folder_ID,
+                                            publicId = TempData["Folder_Id"],
                                             subNav = subNavOptions.category,
                                             prevNav = @item.CategoryName
                                         })"
@@ -26,7 +27,8 @@
                         {
                             <li>
                                 <a href="@Url.Action("Index", "PublicVM", new {
-                                                        publicId = Model.First().Folder_ID,
+                                                        //publicId = Model.First().Folder_ID,
+                                                        publicId = TempData["Folder_Id"],
                                                         subNav = subNavOptions.doctype,
                                                         prevNav = @dt
                                                     })"
