--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -28,7 +28,7 @@
                         <option value=@DateTime.Now.AddYears(-2).Year>two years ago from today</option>
                         <option value=@DateTime.Now.AddYears(-3).Year>three years ago from today</option>
                         <option value="all">All</option>*@
-                        <option value="-1" selected>a year ago from today</option>
+                        <option value="-1" selected>one year ago from today</option>
                         <option value="-2">two years ago from today</option>
                         <option value="-3">three years ago from today</option>
                         <option value="-100">All</option>
@@ -61,11 +61,13 @@
             <div class="filter customDates col-md-3">
                 <label for="IssueDateMinRange">Issue Date Starting year:</label>
                 @Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date", disabled = "disabled" })
+                @*@Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, (TempData["YearRange"] as List<SelectListItem>).First().Text, new { @class = "datefield", type = "date", disabled = "disabled" })*@
                 <br />
             </div>
             <div class="filter customDates col-md-3">
                 <label for="IssueDateMaxRange">Issue Date Ending year:</label>
                 @Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date", disabled = "disabled" })
+                @*@Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, (TempData["YearRange"] as List<SelectListItem>).Last().Text, new { @class = "datefield", type = "date", disabled = "disabled" })*@
                 <br />
             </div>
             <div class="filter col-md-3 buttondiv">
