Need to fix width issue with ajax stuff

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -595,3 +595,12 @@ select {
 .customDates *{
     display: none;
 }
+
+#public_table {
+    width: 100%;
+}
+
+.noData {
+    background: green;
+    width: 100%;
+}
