Logic involving months now working with form submit.  Need to connect date variables with other inputs now

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -608,3 +608,13 @@ select {
 .noData {
     text-align: center;
 }
+
+.datefield { /*The dropdown list styles*/
+    width: 46%;
+    float: left;
+    margin: 2%;
+}
+
+.customDates {
+    display: inline-block;
+}
