--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -9,7 +9,7 @@
                 <fieldset>
                     Customize Date Range:
                     <input type="checkbox" name="customDates" id="customDates" value="customDates" />
-                    <br/>
+                    <br />
                     Records from:
                     <select id="fromYear" name="IssueYearMinRange">
                         <option value="-1" selected>one year ago from today</option>
@@ -43,15 +43,45 @@
                 <br />
             </div>
             <div class="filter customDates col-md-3">
-                <label for="IssueDateMinRange">Issue Date Starting year:</label>
-                @Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date", disabled = "disabled" })
+                <label for="IssueDateMinRange">Starting Issue Date:</label>
+                @Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, "Year", new { @class = "datefield", type = "date", disabled = "disabled" })
                 @*@Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, (TempData["YearRange"] as List<SelectListItem>).First().Text, new { @class = "datefield", type = "date", disabled = "disabled" })*@
+                <select id="startingMonth" name="IssueMonthMinRange" class="datefield"> @* should i do in html.dropdownlist style? *@
+                    <option value="" selected>Month</option>
+                    <option value="01">January</option>
+                    <option value="02">February</option>
+                    <option value="03">March</option>
+                    <option value="04">April</option>
+                    <option value="05">May</option>
+                    <option value="06">June</option>
+                    <option value="07">July</option>
+                    <option value="08">August</option>
+                    <option value="09">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
                 <br />
             </div>
             <div class="filter customDates col-md-3">
-                <label for="IssueDateMaxRange">Issue Date Ending year:</label>
-                @Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date", disabled = "disabled" })
+                <label for="IssueDateMaxRange">Ending Issue Date:</label>
+                @Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, "Year", new { @class = "datefield", type = "date", disabled = "disabled" })
                 @*@Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, (TempData["YearRange"] as List<SelectListItem>).Last().Text, new { @class = "datefield", type = "date", disabled = "disabled" })*@
+                <select id="endingMonth" name="IssueMonthMaxRange" class="datefield">
+                    <option value="" selected>Month</option>
+                    <option value="01">January</option>
+                    <option value="02">February</option>
+                    <option value="03">March</option>
+                    <option value="04">April</option>
+                    <option value="05">May</option>
+                    <option value="06">June</option>
+                    <option value="07">July</option>
+                    <option value="08">August</option>
+                    <option value="09">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
                 <br />
             </div>
             <div class="filter col-md-3 buttondiv">
