fixed small filtering bug from new date filters.  Removed most pagedList remnants (but not pagedList itself yet).

--- a/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
+++ b/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
@@ -1,4 +1,6 @@
-﻿@model IPagedList<PublicVM>
+﻿@*@model IPagedList<PublicVM>*@
+@model IEnumerable<PublicVM>
+
 <div id="category_section">
     <ul id="category_list">
         @foreach (var item in ViewBag.CategoryNavBar)
